# coderedcms

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .prettierrc.toml  .travis.yml  CONTRIBUTORS.md  DOCS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  flake8output.txt  minify.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  setup.cfg  setup.py  testoutput.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  community.md  feature_request.md
ci/: codecov.ps1  compare-artifacts.ps1  compare-codecov.ps1  make-docs.ps1  run-flake8.ps1  run-tests.ps1  run_artifacts.ps1  run_autopep8.ps1  run_black.ps1  run_flake8.ps1  run_tests.ps1  spellcheck.ps1
coderedcms/: __init__.py  admin_urls.py  apps.py  fields.py  forms.py  importexport.py  pyvenv.cfg  recaptcha.py  schema.py  search_urls.py  settings.py  signals.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
coderedcms/Scripts/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _ctypes_test.pyd  _decimal.pyd  _distutils_findvs.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _testbuffer.pyd  _testcapi.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testmultiphase.pyd  _tkinter.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd
coderedcms/api/: mailchimp.py
coderedcms/blocks/: __init__.py  advanced_form_blocks.py  base_blocks.py  content_blocks.py  html_blocks.py  layout_blocks.py  metadata_blocks.py  stream_form_blocks.py
coderedcms/comparisons/: snippet_comparisons.py
coderedcms/core/: __init__.py  admin_urls.py  apps.py  forms.py  settings.py  urls.py  utils.py  views.py  wagtail_hooks.py
coderedcms/migrations/: 0001_initial.py  0002_auto_20180802_1628.py  0002_auto_20180822_1622.py  0002_auto_20180823_1106.py  0002_auto_20180824_1550.py  0002_auto_20180829_1538.py  0003_auto_20180912_1632.py  0004_auto_20181017_1702.py  0004_auto_20181112_2239.py  0004_auto_20181115_2004.py  0004_auto_20181119_1507.py  0005_alter_content_field.py  0005_auto_20181211_1536.py  0005_auto_20181214_1521.py  0005_auto_20181214_2214.py  0005_pin_pygments_language_list.py  0006_auto_20181213_1753.py  0006_auto_20181214_1016.py  0006_auto_20190108_1645.py  0006_mailchimpapisettings.py  0006_pin_pygments_language_list.py  0007_auto_20190114_1515.py  0008_auto_20190122_1242.py  0009_auto_20190201_1546.py  0010_auto_20190320_1231.py  0010_generalsettings_email.py  0010_remove_generalsettings_robots.py  0011_merge_20190322_1309.py  0012_merge_20190322_1324.py  0013_classifiers.py  0013_pagepreview_templates.py  0014_auto_20190408_1820.py  0014_classifiers.py  0015_coderedsessionformsubmission.py  0015_coderedsessionformsubmission_coderedsubmissionrevision.py  0016_auto_20190501_1322.py  0016_auto_20190826_1606.py  0016_auto_20191025_1620.py  0016_layoutsettings_navbar_name.py  0017_auto_20190502_1122.py  (+50 more)
coderedcms/models/: __init__.py  integration_models.py  page_models.py  snippet_models.py  wagtailsettings_models.py
coderedcms/project_template/: .gitattributes  .gitignore  Dockerfile  README.md
coderedcms/search/: __init__.py  apps.py  forms.py  urls.py  views.py
coderedcms/templates/: 404.html  500.html  robots.txt
coderedcms/templatetags/: coderedcms_tags.py
coderedcms/tests/: manage.py  settings.py  test_bin.py  test_templates.py  test_templatetags.py  test_urls.py  test_utils.py  urls.py
coderedcms/wagtail_flexible_forms/: LICENSE  blocks.py  edit_handlers.py  models.py  wagtail_hooks.py
docs/: conf.py  index.rst
docs/_static/: custom.css  docs.css  versions.js
docs/_templates/: globaltoc.html  layout.html  relations.html  searchbox.html  sponsor.html  versions.html
docs/advanced/: advanced01.rst  advanced02.rst  advanced04.rst  index.rst
docs/contributing/: index.rst
docs/features/: events.rst  import_export.rst  index.rst  integrations.rst  mailchimp.rst  related_pages.rst  searching.rst  spam-protection.rst  store_locator.rst  stream_forms.rst
docs/getting_started/: about_tutorial.rst  customize_design.rst  customize_develop.rst  django_settings.rst  index.rst  install.rst  searching.rst  tutorial01.rst  tutorial02.rst  tutorial03.rst  tutorial04.rst  tutorial05.rst  tutorial06.rst  tutorial07.rst  tutorial08.rst  tutorial09.rst  tutorial10.rst  tutorial11.rst
docs/hosting/: index.rst
docs/how_to/: _custom_image1.rst  _custom_image2.rst  _custom_image3.rst  add_tracking_scripts.rst  convert_image_model.rst  docker.rst  get_page_classifiers.rst  headers_and_footers.rst  host_your_project.rst  images.rst  index.rst  link_targets.rst  translation.rst  use_custom_image_model.rst  use_custom_settings_model.rst
docs/reference/: django_settings.rst  index.rst
docs/releases/: index.rst  v0.10.0.rst  v0.11.0.rst  v0.11.rst  v0.12.0.rst  v0.12.1.rst  v0.13.0.rst  v0.13.1.rst  v0.13.2.rst  v0.13.3.rst  v0.14.0.rst  v0.14.1.rst  v0.15.0.rst  v0.15.1.rst  v0.15.2.rst  v0.16.0.rst  v0.16.1.rst  v0.16.2.rst  v0.16.3.rst  v0.17.0.rst  v0.18.0.rst  v0.18.1.rst  v0.18.2.rst  v0.19.0.rst  v0.19.1.rst  v0.20.0.rst  v0.21.0.rst  v0.21.1.rst  v0.22.0.rst  v0.22.1.rst  v0.22.2.rst  v0.22.3.rst  v0.23.0.rst  v0.23.1.rst  v0.24.0.rst  v0.24.1.rst  v0.25.0.rst  v0.25.1.rst  v0.25.2.rst  v0.9.0.rst  (+24 more)
tutorial/mysite/: README.md  requirements.txt
wagtailcrx/: __init__.py  apps.py  fields.py  forms.py  settings.py  views.py  widgets.py
wagtailcrx/blocks/: __init__.py  content_blocks.py  html_blocks.py  layout_blocks.py
wagtailcrx/migrations/: 0001_initial.py  0002_auto_20180829_1538.py  0005_auto_20181214_2214.py  0010_auto_20190320_1231.py  0010_generalsettings_email.py  0011_merge_20190322_1309.py  0014_classifiers.py  0016_auto_20191025_1620.py  0017_generalsettings_external_new_tab.py  0020_auto_20210527_1030.py  0022_auto_20210731_1853.py  0023_auto_20210908_1702.py  0024_analyticssettings.py  0025_delete_socialmediasettings.py  0026_auto_20220513_1627.py  0027_auto_20220603_1142.py  0028_auto_20220609_1532.py  0029_multinavs.py  (+1 more)
(+517 files in other folders)
