# -- PACKAGE --------------------------

[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "CodeRed LLC", email = "info@coderedcorp.com"}
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "beautifulsoup4>=4.8,<5",  # should be the same as wagtail, wagtail 7.0 supports beautifulsoup4 >=4.8,<5 https://github.com/wagtail/wagtail/blob/v7.0/pyproject.toml#L46
    "django-eventtools>=1.0,<2.0", # The latest is 1.0.3 as of 2025-07-25
    "django-bootstrap5>=25.2,<26.0",  # django-bootstrap5 5.2 Added support for Django LTS 5.2, Keeping it pinned to match prior versions
    "Django>=4.2,<6.0",  # should be the same as wagtail, wagtail 7.0 supports Django >=4.2 https://github.com/wagtail/wagtail/blob/v7.0/pyproject.toml#L37
    "geocoder>=1.38,<2.0",  # The latest is 1.38.1 as of 2025-07-25
    "icalendar>=6.1,<7.0",  # The latest is 6.3.1 as of 2025-07-25
    "wagtail>=6.3,<8.0",  #  wagtail 7.0 LTS added formal support for Django 5.2
    "wagtail-cache>=3.0,<4.0",  # wagtail-cache 3.0 Added support for Django LTS 5.2 and wagtail LTS 7.0
    "wagtail-flexible-forms>=2.1,<3.0", # wagtail-flexible-forms 2.1 Added support for Django LTS 5.2 and wagtail LTS 7.0
    "wagtail-seo>=3.1,<4.0",  # wagtail-seo 3.1 Added support for Django LTS 5.2 and wagtail LTS 7.0
]
description = "Wagtail + CodeRed Extensions enabling rapid development of marketing-focused websites."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "coderedcms"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
coderedcms = "coderedcms.bin.coderedcms:main"

[project.urls]
Source = "https://github.com/coderedcorp/coderedcms"
Documentation = "https://docs.coderedcorp.com/wagtail-crx/"
Changelog = "https://docs.coderedcorp.com/wagtail-crx/releases/"

[tool.setuptools]
packages = ["coderedcms"]

[tool.setuptools.dynamic]
version = {attr = "coderedcms.__version__"}


# -- TOOLS ----------------------------

[tool.codespell]
skip = 'migrations,vendor,_build,*.css.map,*.jpg,*.png,*.pyc'
ignore-words-list = 'assertIn'

[tool.django-stubs]
django_settings_module = "coderedcms.tests.settings"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = [
    '^\..*',
    'migrations',
    'node_modules',
    'venv',
    'testproject',
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "coderedcms.tests.settings"
addopts = "--cov --cov-report html --cov-report xml --junitxml junit/test-results.xml"
python_files = "tests.py test_*.py"
junit_family = "xunit2"
junit_suite_name = "coderedcms"

[tool.ruff]
extend-exclude = ["migrations", "testproject"]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
